--- a/app/views/api/v1/users/send_email.html.erb
+++ b/app/views/api/v1/users/send_email.html.erb
@@ -1,5 +1,5 @@
 <h1>User#forgot_password</h1>
 
 <p>
-  <%= @user.first_name %>, find me in app/views/user_mailer/forgot_password.html.erb
+  <%= @current_user.name %>, find me in app/views/user_mailer/forgot_password.html.erb
 </p>
